--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: rocky <marvin@42.fr>                       +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/08/14 16:36:01 by rocky             #+#    #+#              #
+#    Updated: 2024/08/14 16:36:03 by rocky            ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME	= philo
 CFLAGS	= -Werror -Wall -Wextra -pthread
 
